# fastapi-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
app/: lifespan.py  logger.py  main.py
app/core/: constants.py  responses_mixins.py  settings.py
app/core/db/: connector.py
app/core/db/models/: events.py  mixins.py  users.py
app/core/logger/: __init__.py  filters.py
app/core/models/: mixins.py  users.py
app/routers/: service_routers.py
app/routers/v1/: __init__.py  users_router.py
app/schemas/: service_schemas.py
app/schemas/v1/: users_schemas.py
migrations/: env.py
migrations/versions/: 0001_users.py
